--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,7 +2,13 @@ html{
 	font-family: Arial;
 	height: 100%;
 	background: -webkit-gradient(linear, left bottom, right top, color-stop(0%, rgba(255,81,47,1)), color-stop(100%, rgba(221,36,118,1)));
+	background-repeat: no-repeat;
 	background-size: cover;
+}
+
+body {
+	height: 100%;
+	width: 100%;
 }
 
 .register_page-modal {
@@ -119,6 +125,6 @@ input:focus {
 
 .register_page-modal-btn:active {
 	background-color: #bd1962;
-	transition: 0.1s ease-in;
+	transition: 0.1s ease;
 	outline: none;
 }
